# grok-forge

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  rebuild.bat  start.bat  快速启动.bat  重新打包.bat
.cargo/: config.toml
.serena/: project.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/desktop/e2e/: workspace.spec.ts
apps/desktop/scripts/: check-grok-acp.mjs  extract-panels.mjs  fix-font-stacks.mjs  is-source-newer.ps1  publish-exe.mjs  render-icon.mjs
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: BrandMark.tsx  ChangeSummary.tsx  ConversationPane.tsx  ExecutionTimeline.tsx  HighlightedCode.tsx  LivePanels.tsx  MessageList.tsx  Overlay.tsx  ResizeHandle.tsx  ReviewPane.tsx  WorkspaceSidebar.tsx  chatHelpers.test.ts  chatHelpers.ts  types.ts
apps/desktop/src/lib/: MarkdownView.tsx  accounts.test.ts  accounts.ts  attachmentStore.test.ts  attachmentStore.ts  clipboard.ts  contextUsage.test.ts  contextUsage.ts  desktopBridge.test.ts  desktopBridge.ts  grokAcpClient.test.ts  grokAcpClient.ts  (+20 more)
docs/superpowers/plans/: 2026-07-22-multi-account-credential-renewal-fixes.md  2026-07-22-multi-account-credential-renewal.md
docs/superpowers/specs/: 2026-07-22-multi-account-credential-renewal-design.md  2026-07-22-multi-account-credential-renewal-fixes-design.md
(+5 files in other folders)
