[package]
name = "grok-forge-desktop"
version = "0.1.0"
description = "A visual desktop client for Grok Build"
authors = ["Grok Forge contributors"]
edition = "2021"

[lib]
name = "grok_forge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# This app lives inside the generated Grok Build workspace but is intentionally
# compiled as an independent Tauri package.
[workspace]
